--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
           <div class="skill-item">
             <img src="한컴.jpeg" alt="한컴오피스">
-            <span>한컴오피스</span>
+            <span>Hancom Office</span>
           </div>
           <div class="skill-item">
             <img src="ppt.png" alt="PowerPoint">
